Closed Bug 489122 Opened 16 years ago Closed 16 years ago

MOZ_REFLOW_PERF misspelled MOZ_REFLOW_PREF in @top_srcdir@/configure.in

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: matt, Assigned: philor)

Details

Attachments

(2 files)

MOZ_REFLOW_PERF is twice misspelled MOZ_REFLOW_PREF in @top_srcdir@/configure.in, meaning that reflow performance logging can't be enabled on its own.
Easy enough to fix, but I'm not sure whether there's a point in fixing it. The timeline is: 2000-11-30 - bug 61469 added --enable-reflow-perf 2001-03-12 - bug 71514 added includes in nsPresShell.cpp in #ifdef MOZ_REFLOW_PERF_DSP and code in #ifdef MOZ_REFLOW_PERF, and made both things unconditionally defined for debug builds, making --enable-reflow-perf not matter except for non-debug builds - a comment there says rods made sure it built in release builds, but not whether he meant release builds with --enable-reflow-perf, which do not currently build because of the missing include 2001-10-26 - bug 61907 typoed the AC_DEFINE, making --enable-reflow-perf a no-op So for eight years now, if you built debug you got MOZ_REFLOW_PERF whether you wanted it or not, and if you didn't build debug you didn't get it. The only way I know of to get any output from it is the layout-debug extension, which doesn't build if you aren't building debug (viewer was before my time, so I don't know if it would build in release builds). Deciding that reflow-perf is debug-only would allow for a whole bunch of simplification: drop both defines, the --enable, and the massive variety of things like |#if defined(DEBUG) || (defined(MOZ_REFLOW_PERF_DSP) && defined(MOZ_REFLOW_PERF))| and replace them all with just |#ifdef DEBUG|.
This will actually compile, which I always think is a nice touch. No idea if it actually compiles into code that's of any use, though. Alternate just-use-debug patch to follow, for your choosing pleasure.
Assignee: nobody → philringnalda
Status: NEW → ASSIGNED
Attachment #375545 - Flags: superreview?(roc)
Attachment #375545 - Flags: review?(roc)
Practically speaking, this is really what we've had for eight years now, just made less obscure and more explicit.
Attachment #375545 - Flags: superreview?(roc)
Attachment #375545 - Flags: superreview+
Attachment #375545 - Flags: review?(roc)
Attachment #375545 - Flags: review+
Comment on attachment 375545 [details] [diff] [review] The make-it-compile approach This part is a no-brainer. What we should do with it beyond this, I don't know.
k, http://hg.mozilla.org/mozilla-central/rev/39a58d2e1079 - if someone wants to take the debug-only version, I can always unrot it.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: