Bug 489122 - MOZ_REFLOW_PERF not AC_DEFINED by --enable-reflow-perf since it's misspelled _PREF in configure.in, r+sr=roc